# smart-capture-plan

./: CapturePlan_Template.xlsx  README.md  app.py  app2.py  app3.py  excel_writer.py  excel_writer2.py  excel_writer3.py  excel_writer4.py  openai_client.py  parse_docx.py  pyproject.toml  requirements.txt  streamlit.sh  template.xlsx
